# PO

Different_Programs/Directories/: Dir.cpp  Dir.h  File.cpp  File.h  main.cpp
Different_Programs/Table_STL/: Data.cpp  Data.h  Table.cpp  Table.h
Different_Programs/Virus/: main
Lab01.1/: main.cpp
Lab01/include/: ComplexNumber.h
Lab01/src/: ComplexNumber.cpp
Lab03/: CMakeLists.txt  main.cpp
Lab03/include/: ReverseText.h
Lab03/src/: ReverseText.cpp
Lab04/: CMakeLists.txt
Lab04/include/: Funkcje.h  ZlozenieFunkcji.h
Lab04/src/: Funkcje.cpp  ZlozenieFunkcji.cpp
Lab05/: CMakeLists.txt
Lab05/include/: FSContainer.h  FlatShape.h  Triangle.h  Vertex.h
Lab05/src/: FSContainer.cpp  FlatShape.cpp  Triangle.cpp  Vertex.cpp
Lab06/: CMakeLists.txt  main.cpp
Lab06/include/: Primitive.h  Product.h  Ratio.h  Sum.h
Lab06/src/: Primitive.cpp  Product.cpp  Ratio.cpp  Sum.cpp
Lab07/: CMakeLists.txt
Lab07/include/: Dir.h  Entity.h  File.h
Lab07/src/: Dir.cpp  Entity.cpp  File.cpp
Lab08/: CMakeLists.txt
Lab08/include/: GameObj.h
Lab08/src/: GameObj.cpp
Lab09/: CMakeLists.txt
Lab09/include/: FlatPoint.h
Lab09/src/: FlatPoint.cpp
Lab10/: CMakeLists.txt
Lab10/include/: Product.h  Sum.h  Table.h
Lab10/src/: Product.cpp  Sum.cpp  Table.cpp
Lab11/: CMakeLists.txt
Lab11/include/: Variable.h
Lab11/src/: Variable.cpp
Lab12/: CMakeLists.txt  main.cpp
Lab12/include/: PairOfNumbers.h  RangeArray.h
Lab13/: CMakeLists.txt
Lab13/include/: Animals.h  Meadow.h
Lab13/src/: Animals.cpp  Meadow.cpp
